# consul-patch-json

./: .gitattributes  Cargo.toml  README.md
integration/: README.md  patch1.json  run.sh
src/: main.rs
