[package]
name = "consul-patch-json"
version = "0.1.0"
description = "A tool to patch json values for consul keys"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/consul-patch-json"
homepage = "https://github.com/ngerakines/consul-patch-json"
license = "MIT"
publish = true
keywords = ["consul"]

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
consulrs = "0.1.0"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = {version="1.28.0", features = ["full"]}

[profile.release]
lto = true
strip = true
